--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "playground": "yarn build && node playground.js",
     "test": "yarn build && nyc mocha",
+    "test:watch": "nyc mocha --watch",
     "release": "NODE_ENV=production yarn test && yarn benchmark"
   },
   "devDependencies": {
