--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "node": ">=6"
   },
   "scripts": {
-    "benchmark": "node benchmark.js",
     "build": "rollup --config",
     "dev": "rollup --config -w",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "playground": "yarn build && node playground.js",
     "test": "yarn build && nyc mocha",
     "test:watch": "nyc mocha --watch",
-    "release": "NODE_ENV=production yarn test && yarn benchmark"
+    "release": "NODE_ENV=production yarn test"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
