--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 
 node_js:
+  - 12
   - 10
   - 8
-  - 6
+
+before_install:
+  - npm install -g yarn
 
 after_success:
   - npm run coveralls
