--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
   "author": "Nahuel Scotti <nahuel.scotti@gmail.com> (https://www.singuerinc.com)",
   "repository": "singuerinc/spanish-car-plate",
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config -w",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "np": "np",
     "test": "yarn build && nyc mocha",
     "test:watch": "nyc mocha --watch",
-    "release": "NODE_ENV=production yarn test",
+    "release": "NODE_ENV=production yarn test && yarn np",
     "report": "nyc report --reporter=html"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.1.5",
     "benchmark": "^2.1.4",
     "coveralls": "^3.0.1",
-    "mocha": "^4.0.1",
+    "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^11.8.0",
+    "np": "^5.0.3",
+    "nyc": "^14.1.1",
     "rollup": "^0.59.2",
     "rollup-plugin-babel": "^4.0.3"
   },
@@ -45,5 +47,6 @@
     "dist/index.js",
     "dist/index.js.map",
     "types/index.d.ts"
-  ]
+  ],
+  "np": {}
 }
